# emacsconf-2024

./: .gitattributes  .gitignore  Makefile  README.org  emacsconf-2024.m3u  erc.org  git-conv.org  git-conv.py  p-search.org  pyproject.toml  sops.org  subed.org  summaries.org  transducers.org  vtt_summarizer.py
data/: transactions.csv
scripts/: generate_summaries_overview.sh  generate_transactions.sh  generate_transcripts.sh
summaries/: emacsconf-2024-blee--about-blee-towards-an-integrated-emacs-environment-for-enveloping-our-own-autonomy-directed-digital-ecosystem--mohsen-banan--main.org  emacsconf-2024-casual--reimagining-the-emacs-user-experience-with-casual-suite--charles-choi--main.org  emacsconf-2024-color--colour-your-emacs-with-ease--ryota--main.org  emacsconf-2024-emacs30--emacs-30-highlights--philip-kaludercic--main.org  emacsconf-2024-guile--beguiling-emacs-guileemacs-relaunched--robin-templeton--main.org  emacsconf-2024-gypsum--gypsum-my-clone-of-emacs-and-elisp-written-in-scheme--ramin-honary--main.org  emacsconf-2024-hyperbole--fun-things-with-gnu-hyperbole--mats-lidell--main.org  emacsconf-2024-hyperdrive--new-in-hyperdriveel-quick-install-peer-graph-transclusion--joseph-turner--main.org  emacsconf-2024-julia--exploring-shared-philosophies-in-julia-and-emacs--gabriele-bozzola--main.org  emacsconf-2024-learning--survival-of-the-skillest-thriving-in-the-learning-jungle--bala-ramadurai--main.org  emacsconf-2024-links--unlocking-linked-data-replacing-specialized-apps-with-an-orgbased-semantic-wiki--abhinav-tushar--main.org  (+14 more)
(+61 files in other folders)
